staging for pull request

--- a/pages/fremont.html
+++ b/pages/fremont.html
@@ -3,120 +3,122 @@
 <head>
   <meta charset="utf-8" />
   <title>Fremont Brewing</title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
             <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="../index.html">Finder</a></li>
+              <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
               </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
+              <li><a href="aboutus.html">About Us</a></li>
             </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-        </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <img src="../images/brewImages/FBC-Fremont-Brewing-4C-logo.jpg" alt="fremont brewing"></a>
-      <h2>Fremont Brewing</h2>
-      <p>This family-owned brewery started in 2009 by founder Matt Lincecum.
-          The Fremont's goal is to promote the history of Fremont area as well as provide beer made of the finest ingredients.
-          They have an active role in their community and offer some refreshing, award winning beverages.</p>
-    </div>
-    <div id='social'>
-      <ul>
-        <li><a href="https://www.fremontbrewing.com/welcome/">Fremont Brewing Website</a></li>
-        <li><a href="https://www.facebook.com/pages/Fremont-Brewing-Company/128777587151652"><img src="../images/icons/facebook.png" alt="facebook logo"/>-Facebook</a></li>
-        <li><a href="https://twitter.com/fremontbrewing"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
-        <li><a href="https://www.instagram.com/fremontbrewing/"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li>
-        <li><a href="https://untappd.com/fremontbrewing"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
-      </ul>
-    </div>
-    <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.819439397075!2d-122.34661208454219!3d47.64907549303638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490150163a691ef%3A0x542d7060f3d23cf3!2sFremont+Brewing+Company!5e0!3m2!1sen!2sus!4v1519276458940" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id="address">
+          </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/FBC-Fremont-Brewing-4C-logo.jpg" alt="fremont brewing"></a>
+        <h2>Fremont Brewing</h2>
+        <p>This family-owned brewery started in 2009 by founder Matt Lincecum.
+            The Fremont's goal is to promote the history of Fremont area as well as provide beer made of the finest ingredients.
+            They have an active role in their community and offer some refreshing, award winning beverages.</p>
+      </div>
+      <div id='social'>
         <ul>
-          <li>1050 N 34th St</li>
-          <li>Seattle, WA, 98103</li>
-          <li>Daily: 11AM-9PM </li>
-          <li>Phone: (206) 420-2407</li>
+          <li><a href="https://www.fremontbrewing.com/welcome/">Fremont Brewing Website</a></li>
+          <li><a href="https://www.facebook.com/pages/Fremont-Brewing-Company/128777587151652"><img src="../images/icons/facebook.png" alt="facebook logo"/> Facebook</a></li>
+          <li><a href="https://twitter.com/fremontbrewing"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
+          <li><a href="https://www.instagram.com/fremontbrewing/"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
+          <li><a href="https://untappd.com/fremontbrewing"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
         </ul>
       </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+      <div id='map'>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.819439397075!2d-122.34661208454219!3d47.64907549303638!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5490150163a691ef%3A0x542d7060f3d23cf3!2sFremont+Brewing+Company!5e0!3m2!1sen!2sus!4v1519276458940" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id="address">
+          <ul>
+            <li>1050 N 34th St</li>
+            <li>Seattle, WA, 98103</li>
+            <li>Daily: 11AM-9PM </li>
+            <li>Phone: (206) 420-2407</li>
+          </ul>
+        </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
 </body>
 </html>
