--- a/pages/peddler.html
+++ b/pages/peddler.html
@@ -3,129 +3,131 @@
 <head>
   <meta charset="utf-8" />
   <title>Peddler Brewing</title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
             <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="../index.html">Finder</a></li>
+              <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
               </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
+              <li><a href="aboutus.html">About Us</a></li>
             </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
+          </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/peddler.png" alt="peddler brewing"></a>
+        <h2>Peddler Brewing</h2>
+        <p>The Peddler Brewing Company began with Haley and Dave Keller's love of brewing in March 2013.
+            They now have 15-barrel brewing system to create and market their fantastic selections available at local stores, restaurants, and of course, their brewing house.
+            Peddler prides itself in making it feel welcoming to all their customers by providing offers special day activities to bring your families and pets. 
+            Additionally, the Peddler are active advocators of cycling, including providing discounts for Cascade card members and a small bike repair stop.</p>
+      </div>
+      <div id='social'>
+          <ul>
+            <li><a href="https://www.peddlerbrewing.com/">Peddler Brewing Website</a></li>
+            <li><a href="https://www.facebook.com/PeddlerBrewing"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
+            <li><a href="https://twitter.com/PeddlerBrewing"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
+            <li><a href="https://www.instagram.com/peddlerbrewing/"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li> 
+            <li><a href="https://untappd.com/PeddlerBrewing"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
           </ul>
-        </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <img src="../images/brewImages/peddler.png" alt="peddler brewing"></a>
-      <h2>Peddler Brewing</h2>
-      <p>The Peddler Brewing Company began with Haley and Dave Keller's love of brewing in March 2013.
-          They now have 15-barrel brewing system to create and market their fantastic selections available at local stores, restaurants, and of course, their brewing house.
-          Peddler prides itself in making it feel welcoming to all their customers by providing offers special day activities to bring your families and pets. 
-          Additionally, the Peddler are active advocators of cycling, including providing discounts for Cascade card members and a small bike repair stop.</p>
-    </div>
-    <div id='social'>
+        </div>
+      <div id='map'>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.057972616394!2d-122.37928038436752!3d47.66387017918845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015b8235e1373%3A0x24179a5cad891ea7!2s1514+NW+Leary+Way%2C+Seattle%2C+WA+98107!5e0!3m2!1sen!2sus!4v1519275940986" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id="address">
         <ul>
-          <li><a href="https://www.peddlerbrewing.com/">Peddler Brewing Website</a></li>
-          <li><a href="https://www.facebook.com/PeddlerBrewing"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
-          <li><a href="https://twitter.com/PeddlerBrewing"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
-          <li><a href="https://www.instagram.com/peddlerbrewing/"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li> 
-          <li><a href="https://untappd.com/PeddlerBrewing"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
+          <li>1514 NW Leary Way</li>
+          <li>Seattle, WA, 98107</li>
+          <li>Hours:</li>
+          <ul id="hours">
+            <li>Monday & Tuesday: Closed</li>
+            <li>Wednesday: 4-10PM</li>
+            <li>Thursday & Friday: 4-11PM</li>
+            <li>Saturday: 11AM-11PM</li>
+            <li>Sunday: 11AM-8PM</li>          
+          </ul>
+          <li>Phone: 360-362-0002</li>
+          <li>Email: peddler@peddlerbrewing.com</li>
         </ul>
       </div>
-    <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.057972616394!2d-122.37928038436752!3d47.66387017918845!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015b8235e1373%3A0x24179a5cad891ea7!2s1514+NW+Leary+Way%2C+Seattle%2C+WA+98107!5e0!3m2!1sen!2sus!4v1519275940986" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id="address">
-      <ul>
-        <li>1514 NW Leary Way</li>
-        <li>Seattle, WA, 98107</li>
-        <li>Hours:</li>
-        <ul id="hours">
-          <li>Monday & Tuesday: Closed</li>
-          <li>Wednesday: 4-10PM</li>
-          <li>Thursday & Friday: 4-11PM</li>
-          <li>Saturday: 11AM-11PM</li>
-          <li>Sunday: 11AM-8PM</li>          
-        </ul>
-        <li>Phone: 360-362-0002</li>
-        <li>Email: peddler@peddlerbrewing.com</li>
-      </ul>
-    </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
 </body>
 </html>
