--- a/pages/populuxe.html
+++ b/pages/populuxe.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <title>Populuxe Brewing</title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
+  <div id="wrapper">
+    <header>
       <div id="logo">
           <h1>Seattle Brewery Finder</h1>
       </div>
@@ -95,10 +96,10 @@
     <div id='social'>
       <ul>
         <li><a href="https://www.populuxebrewing.com/">Populuxe Brewing Website</a></li>
-        <li><a href="https://www.facebook.com/PopuluxeBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
-        <li><a href="https://twitter.com/PopuluxeBrewing"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
-        <li><a href="https://www.instagram.com/populuxebrewing/"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li> 
-        <li><a href="https://untappd.com/PopuluxeBrewing"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
+        <li><a href="https://www.facebook.com/PopuluxeBrewing/"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
+        <li><a href="https://twitter.com/PopuluxeBrewing"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
+        <li><a href="https://www.instagram.com/populuxebrewing/"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li> 
+        <li><a href="https://untappd.com/PopuluxeBrewing"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
       </ul>
     </div>
     <div id='map'>
@@ -119,9 +120,10 @@
           <li>Email: populuxebrewing.com</li>
         </ul>
       </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
 </body>
 </html>
