--- a/pages/twobeers.html
+++ b/pages/twobeers.html
@@ -3,123 +3,125 @@
 <head>
   <meta charset="utf-8" />
   <title>Two Beers Brewing Company</title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-          <ul>
-            <li><a href="home.html">Home</a></li>
-            <li><a href="../index.html">Finder</a></li>
-            <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
             <ul>
-              <li>
-                <a href="">Ballard</a>
-                <ul>
-                  <li><a href="peddler.html">Peddler Brewing</a></li>
-                  <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                  <li><a href="reubens.html">Reuben's Brews</a></li>
-                </ul>
+              <li><a href="home.html">Home</a></li>
+              <li><a href="../index.html">Finder</a></li>
+              <li><a href="">Breweries</a>
+              <ul>
+                <li>
+                  <a href="">Ballard</a>
+                  <ul>
+                    <li><a href="peddler.html">Peddler Brewing</a></li>
+                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                    <li><a href="reubens.html">Reuben's Brews</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Capitol Hill</a>
+                  <ul>
+                    <li><a href="optimism.html">Optimism Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Central District</a>
+                  <ul>
+                    <li><a href="standard.html">Standard Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Fremont</a>
+                  <ul>
+                    <li><a href="fremont.html">Fremont Brewing</a></li>
+                    <li><a href="outlander.html">Outlander Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Interbay</a>
+                  <ul>
+                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Lake City</a>
+                  <ul>
+                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Magnolia</a>
+                  <ul>
+                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Pike Place</a>
+                  <ul>
+                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">SoDo</a>
+                  <ul>
+                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                  </ul>
+                </li>
+                <li>
+                  <a href="">Ravenna</a>
+                  <ul>
+                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                  </ul>
+                </li>
+              </ul>
               </li>
-              <li>
-                <a href="">Capitol Hill</a>
-                <ul>
-                  <li><a href="optimism.html">Optimism Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Central District</a>
-                <ul>
-                  <li><a href="standard.html">Standard Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Fremont</a>
-                <ul>
-                  <li><a href="fremont.html">Fremont Brewing</a></li>
-                  <li><a href="outlander.html">Outlander Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Interbay</a>
-                <ul>
-                  <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Lake City</a>
-                <ul>
-                  <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Magnolia</a>
-                <ul>
-                  <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Pike Place</a>
-                <ul>
-                  <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">SoDo</a>
-                <ul>
-                  <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                </ul>
-              </li>
-              <li>
-                <a href="">Ravenna</a>
-                <ul>
-                  <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                </ul>
-              </li>
+              <li><a href="aboutus.html">About Us</a></li>
             </ul>
-            </li>
-            <li><a href="aboutus.html">About Us</a></li>
-          </ul>
-        </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <img src="../images/brewImages/twobeerslogonew.png" alt="2beers">
-      <h2>Two Beers Brewing Company</h2>
-      <p>10 years into their existance, Two Beers Brewing is still one of the most consitent breweries that you can find in Seattle. Working out of an office park in the Sodo/Georgetown neighborhood, you will find a great spot for groups of all sizes with 24+ taps of Two Beers, plus sister Seattle Cider Company, as well as food prepared on site by Bread & Circus's. Defintiely one of the better options from one of the longer tenured Seattle brewing venture.</p>
-    </div>
-    <div id='social'>
-      <ul>
-        <li><a href='https://www.twobeersbrewery.com/'>Two Beers Website</a></li>
-        <li><a href='https://www.facebook.com/TwoBeersBrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/>-Facebook</a></li>
-        <li><a href='https://twitter.com/TwoBeersBrewing'><img src='../images/icons/twitter.png' alt='twitter logo'/>-Twitter</a></li>
-        <li><a href='https://www.instagram.com/twobeersbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/>-Instagram</a></li>
-        <li><a href='https://untappd.com/TwoBeersBrewingCo'><img src='../images/icons/untappd.png' alt='untappd logo'/>-Untappd</a></li>
-    </div>
-    <div id='map'>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10769.486545399284!2d-122.3374981!3d47.5605572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3104a9e1599981e1!2sTwo+Beers+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519275835116" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id='address'>
-        <ul>
-          <li>4700 Ohio Ave S</li>
-          <li>Seattle, WA  98134</li>
-          <ul>
-            <li>Monday: Closed</li>
-            <li>Tuesday - Thursday: 3pm - 9pm</li>
-            <li>Friday: 3pm - 10pm</li>
-            <li>Saturday: 1pm - 10pm</li>
-            <li>Sunday: 1pm - 6pm</li>
-          </ul>
-          <li>206-762-0490</li>
-        </ul>
+          </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/twobeerslogonew.png" alt="2beers">
+        <h2>Two Beers Brewing Company</h2>
+        <p>10 years into their existance, Two Beers Brewing is still one of the most consitent breweries that you can find in Seattle. Working out of an office park in the Sodo/Georgetown neighborhood, you will find a great spot for groups of all sizes with 24+ taps of Two Beers, plus sister Seattle Cider Company, as well as food prepared on site by Bread & Circus's. Defintiely one of the better options from one of the longer tenured Seattle brewing venture.</p>
       </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+      <div id='social'>
+        <ul>
+          <li><a href='https://www.twobeersbrewery.com/'>Two Beers Website</a></li>
+          <li><a href='https://www.facebook.com/TwoBeersBrewing/'><img src='../images/icons/facebook.png' alt='facebook logo'/> Facebook</a></li>
+          <li><a href='https://twitter.com/TwoBeersBrewing'><img src='../images/icons/twitter.png' alt='twitter logo'/> Twitter</a></li>
+          <li><a href='https://www.instagram.com/twobeersbrewing/'><img src='../images/icons/instagram.png' alt='instagram logo'/> Instagram</a></li>
+          <li><a href='https://untappd.com/TwoBeersBrewingCo'><img src='../images/icons/untappd.png' alt='untappd logo'/> Untappd</a></li>
+      </div>
+      <div id='map'>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10769.486545399284!2d-122.3374981!3d47.5605572!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x3104a9e1599981e1!2sTwo+Beers+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519275835116" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id='address'>
+          <ul>
+            <li>4700 Ohio Ave S</li>
+            <li>Seattle, WA  98134</li>
+            <ul>
+              <li>Monday: Closed</li>
+              <li>Tuesday - Thursday: 3pm - 9pm</li>
+              <li>Friday: 3pm - 10pm</li>
+              <li>Saturday: 1pm - 10pm</li>
+              <li>Sunday: 1pm - 6pm</li>
+            </ul>
+            <li>206-762-0490</li>
+          </ul>
+        </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
 </body>
 </html>
