--- a/pages/urbanfam.html
+++ b/pages/urbanfam.html
@@ -3,124 +3,126 @@
 <head>
   <meta charset="utf-8" />
   <title>Urban Family Brewing</title>
-  <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  <link rel="stylesheet" type="text/css" href="../css/breweries.css" />
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
-  <header>
-      <div id="logo">
-          <h1>Seattle Brewery Finder</h1>
-      </div>
-      <nav id="main_nav">
-            <ul>
-              <li><a href="home.html">Home</a></li>
-              <li><a href="../index.html">Finder</a></li>
-              <li><a href="">Breweries</a>
+  <div id="wrapper">
+    <header>
+        <div id="logo">
+            <h1>Seattle Brewery Finder</h1>
+        </div>
+        <nav id="main_nav">
               <ul>
-                <li>
-                  <a href="">Ballard</a>
-                  <ul>
-                    <li><a href="peddler.html">Peddler Brewing</a></li>
-                    <li><a href="populuxe.html">Populuxe Brewing</a></li>
-                    <li><a href="reubens.html">Reuben's Brews</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Capitol Hill</a>
-                  <ul>
-                    <li><a href="optimism.html">Optimism Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Central District</a>
-                  <ul>
-                    <li><a href="standard.html">Standard Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Fremont</a>
-                  <ul>
-                    <li><a href="fremont.html">Fremont Brewing</a></li>
-                    <li><a href="outlander.html">Outlander Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Interbay</a>
-                  <ul>
-                    <li><a href="holymt.html">Holy Mountain Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Lake City</a>
-                  <ul>
-                    <li><a href="hellbent.html">Hellbent Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Magnolia</a>
-                  <ul>
-                    <li><a href="urbanfam.html">Urban Family Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Pike Place</a>
-                  <ul>
-                    <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">SoDo</a>
-                  <ul>
-                    <li><a href="twobeers.html">Two Beers Brewing</a></li>
-                  </ul>
-                </li>
-                <li>
-                  <a href="">Ravenna</a>
-                  <ul>
-                    <li><a href="ravenna.html">Ravenna Brewing</a></li>
-                  </ul>
-                </li>
-              </ul>
-              </li>
-              <li><a href="aboutus.html">About Us</a></li>
-            </ul>
-          </nav>
-  </header>
-  <section>
-    <div id='breweryInfo'>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/350x150"></a>
-      <h2>Urban Family Brewing</h2>
-      <p>Serving mainly French and Belgian farmhouse styles with Pacific Northwest ingredients.  This industrial style brewery located in the Magnolia neighborhood also rotates its beers regularly which guarantees they are utilizing fresh ingredients as well as complex yeast strains.  Urban Family is a small craft brewery that also serves East Coast style IPA’s.</p>
-    </div>
-    <div id='social'>
-        <ul>
-            <li><a href="http://www.urbanfamilybrewing.com/">Urban Family Website</a></li>
-            <li><a href="https://www.facebook.com/pages/Urban-Family-Brewing/259194390839354"><img src="../images/icons/facebook.png" alt="facebook logo">-Facebook</a></li>
-            <li><a href="https://twitter.com/urbanfambrewing?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="../images/icons/twitter.png" alt="twitter logo">-Twitter</a></li>
-            <li><a href="https://www.instagram.com/urbanfamilybrewing/?hl=en"><img src="../images/icons/instagram.png" alt="instagram logo">-Instagram</a></li>
-            <li><a href="https://untappd.com/UrbanFamilyBrewing"><img src="../images/icons/untappd.png" alt="untappd logo">-Untappd</a></li>
-        </ul>
-    </div>
-    <div id='map'>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.2255502665435!2d-122.39247838413733!3d47.66061457918837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015c65bb6b3bf%3A0x741bed57aed7bc5e!2sUrban+Family+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519276478011" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
-    </div>
-    <div id='address'>
-    <ul>
-        <li>4441 26th Ave W Suite A</li>
-            <li>Seattle, WA 98199</li>
-            <li>hours:</li>
-                <ul id=hours>
-                    <li>Monday - Thursday: 4pm-9pm</li>
-                    <li>Friday   4pm-10pm</li>
-                    <li>Saturday  12pm-10pm</li>
+                <li><a href="home.html">Home</a></li>
+                <li><a href="../index.html">Finder</a></li>
+                <li><a href="">Breweries</a>
+                <ul>
+                  <li>
+                    <a href="">Ballard</a>
+                    <ul>
+                      <li><a href="peddler.html">Peddler Brewing</a></li>
+                      <li><a href="populuxe.html">Populuxe Brewing</a></li>
+                      <li><a href="reubens.html">Reuben's Brews</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Capitol Hill</a>
+                    <ul>
+                      <li><a href="optimism.html">Optimism Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Central District</a>
+                    <ul>
+                      <li><a href="standard.html">Standard Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Fremont</a>
+                    <ul>
+                      <li><a href="fremont.html">Fremont Brewing</a></li>
+                      <li><a href="outlander.html">Outlander Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Interbay</a>
+                    <ul>
+                      <li><a href="holymt.html">Holy Mountain Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Lake City</a>
+                    <ul>
+                      <li><a href="hellbent.html">Hellbent Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Magnolia</a>
+                    <ul>
+                      <li><a href="urbanfam.html">Urban Family Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Pike Place</a>
+                    <ul>
+                      <li><a href="cloudburst.html">Cloudburst Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">SoDo</a>
+                    <ul>
+                      <li><a href="twobeers.html">Two Beers Brewing</a></li>
+                    </ul>
+                  </li>
+                  <li>
+                    <a href="">Ravenna</a>
+                    <ul>
+                      <li><a href="ravenna.html">Ravenna Brewing</a></li>
+                    </ul>
+                  </li>
                 </ul>
-        <li>Phone: (206) 861-6769 </li>
-        <li><a href="mailto:info@urbanfamilybrewing.com">info@urbanfamilybrewing.com </a></li>
-    </div>
-  </section>
-  <footer>
-    <p>&copy Seattle Brewery Finders</p>
-  </footer>
+                </li>
+                <li><a href="aboutus.html">About Us</a></li>
+              </ul>
+            </nav>
+    </header>
+    <section>
+      <div id='breweryInfo'>
+        <img src="../images/brewImages/urbanfam.png"></a>
+        <h2>Urban Family Brewing</h2>
+        <p>Serving mainly French and Belgian farmhouse styles with Pacific Northwest ingredients.  This industrial style brewery located in the Magnolia neighborhood also rotates its beers regularly which guarantees they are utilizing fresh ingredients as well as complex yeast strains.  Urban Family is a small craft brewery that also serves East Coast style IPA’s.</p>
+      </div>
+      <div id='social'>
+          <ul>
+              <li><a href="http://www.urbanfamilybrewing.com/">Urban Family Website</a></li>
+              <li><a href="https://www.facebook.com/pages/Urban-Family-Brewing/259194390839354"><img src="../images/icons/facebook.png" alt="facebook logo"> Facebook</a></li>
+              <li><a href="https://twitter.com/urbanfambrewing?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><img src="../images/icons/twitter.png" alt="twitter logo"> Twitter</a></li>
+              <li><a href="https://www.instagram.com/urbanfamilybrewing/?hl=en"><img src="../images/icons/instagram.png" alt="instagram logo"> Instagram</a></li>
+              <li><a href="https://untappd.com/UrbanFamilyBrewing"><img src="../images/icons/untappd.png" alt="untappd logo"> Untappd</a></li>
+          </ul>
+      </div>
+      <div id='map'>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2687.2255502665435!2d-122.39247838413733!3d47.66061457918837!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x549015c65bb6b3bf%3A0x741bed57aed7bc5e!2sUrban+Family+Brewing+Co.!5e0!3m2!1sen!2sus!4v1519276478011" width="600" height="300" frameborder="0" style="border:0" allowfullscreen></iframe>
+      </div>
+      <div id='address'>
+      <ul>
+          <li>4441 26th Ave W Suite A</li>
+              <li>Seattle, WA 98199</li>
+              <li>hours:</li>
+                  <ul id=hours>
+                      <li>Monday - Thursday: 4pm-9pm</li>
+                      <li>Friday   4pm-10pm</li>
+                      <li>Saturday  12pm-10pm</li>
+                  </ul>
+          <li>Phone: (206) 861-6769 </li>
+          <li><a href="mailto:info@urbanfamilybrewing.com">info@urbanfamilybrewing.com </a></li>
+      </div>
+    </section>
+    <footer>
+      <p>&copy Seattle Brewery Finders</p>
+    </footer>
+  </div>
   <script src = "app.js"></script>
 </body>
 </html>
