--- a/index.html
+++ b/index.html
@@ -3,21 +3,88 @@
 <head>
   <meta charset="utf-8" />
   <title>Seattle Brewery Finder</title>
-  <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
   <link rel="stylesheet" type="text/css" href="css/index.css" />
+  <!-- <link rel="stylesheet" type="text/css" href="css/reset.css" /> -->
 </head>
 <body>
     <div class="wrapper">
         <header>
             <h1>Seattle Brewery Finder</h1>
-            <nav>
+            <nav id="main_nav">
                 <ul>
-                    <li><a href="" class="current">Home</a></li>
-                    <li><a href="">Map</a></li>
-                    <li><a href="">Breweries</a></li>
-                    <li><a href="">About Us</a></li>
+                    <li><a href="pages/home.html">Home</a></li>
+                    <li><a href="../index.html">Finder</a></li>
+                    <li><a href="">Breweries</a>
+                        <ul>
+                          <li>
+                            <a href="">Ballard</a>
+                            <ul>
+                              <li><a href="pages/peddler.html">Peddler Brewing</a></li>
+                              <li><a href="pages/populuxe.html">Populuxe Brewing</a></li>
+                              <li><a href="pages/reubens.html">Reuben's Brews</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Capitol Hill</a>
+                            <ul>
+                              <li><a href="pages/optimism.html">Optimism Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Central District</a>
+                            <ul>
+                              <li><a href="pages/standard.html">Standard Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Fremont</a>
+                            <ul>
+                              <li><a href="pages/fremont.html">Fremont Brewing</a></li>
+                              <li><a href="pages/outlander.html">Outlander Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Interbay</a>
+                            <ul>
+                              <li><a href="pages/holymt.html">Holy Mountain Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Lake City</a>
+                            <ul>
+                              <li><a href="pages/hellbent.html">Hellbent Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Magnolia</a>
+                            <ul>
+                              <li><a href="pages/urbanfam.html">Urban Family Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Pike Place</a>
+                            <ul>
+                              <li><a href="pages/cloudburst.html">Cloudburst Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">SoDo</a>
+                            <ul>
+                              <li><a href="pages/twobeers.html">Two Beers Brewing</a></li>
+                            </ul>
+                          </li>
+                          <li>
+                            <a href="">Ravenna</a>
+                            <ul>
+                              <li><a href="pages/ravenna.html">Ravenna Brewing</a></li>
+                            </ul>
+                          </li>
+                        </ul>
+                    </li>
+                    <li><a href="pages/aboutus.html">About Us</a></li>
                 </ul>
             </nav>
+            
         </header>
         <section class="courses">
             <article>
