--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <nav id="main_nav">
                 <ul>
                     <li><a href="pages/home.html">Home</a></li>
-                    <li><a href="../index.html">Finder</a></li>
+                    <li><a href="index.html">Finder</a></li>
                     <li><a href="">Breweries</a>
                         <ul>
                           <li>
