--- a/pages/home.html
+++ b/pages/home.html
@@ -92,11 +92,30 @@
         <p>Please select one of the options below.</p>
         <button id="older" type="submit">Yes</button>
         <button id="young" type="submit">No</button>
-      </div>
-      <a href="https://placeholder.com"><img src="http://via.placeholder.com/1150x350"></a>
+    </div>
       <h2>Seattle Brewery Finder</h2>
       <p>Seattle Brewery Finder was started in a Code Fellows 201 class.  It was the final project idea of David Stoll.  The goal of Seattle Brewery Finder is to allow a user to find a Brewery in Seattle that meets their needs.  This site tells you if you can bring your dogs or children with you on your next outing.  </p>
     </div>
+    <div class="container">
+        <div class ="slideshow">    
+          <img class="first" src="../images/brewImages/allbeers.jpg"> 
+            <img src="../images/brewImages/beercup.jpg"/>
+            <img src="../images/brewImages/beerfood.jpg"/>
+            <img src="../images/brewImages/cheers.jpg"/>
+            <img src="../images/brewImages/FBC-Fremont-Brewing-4C-logo.jpg"/>
+            <img src="../images/brewImages/hell.jpg"/>
+            <img src="../images/brewImages/holyMountain_logo.png"/>
+            <img src="../images/brewImages/outlanderlogo.jpg"/>
+            <img src="../images/brewImages/peddler.png"/>
+            <img src="../images/brewImages/populuxelogo.jpg"/>
+            <img src="../images/brewImages/summerdrink.jpg"/>
+            <img src="../images/brewImages/twobeerslogonew.png"/>
+            <img src="../images/brewImages/allbeers.jpg"> 
+            <img src="../images/brewImages/beercup.jpg"/>
+            <img src="../images/brewImages/beerfood.jpg"/>
+            <img src="../images/brewImages/cheers.jpg"/>
+        </div>
+    </div> 
     <div id='map'>
     <iframe src="https://www.google.com/maps/d/embed?mid=1VI9Lz2Gn27ZQEydghwelA-AHUMDl4lnS" width="640" height="480" align="middle"></iframe>
     </div>
