--- a/pages/home.html
+++ b/pages/home.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="../css/reset.css" />
 </head>
 <body>
+  <div id ="wrapper">
   <header>
       <div id="logo">
           <h1>Seattle Brewery Finder</font></h1>
@@ -93,9 +94,6 @@
         <button id="older" type="submit">Yes</button>
         <button id="young" type="submit">No</button>
     </div>
-      <h2>Seattle Brewery Finder</h2>
-      <p>Seattle Brewery Finder was started in a Code Fellows 201 class.  It was the final project idea of David Stoll.  The goal of Seattle Brewery Finder is to allow a user to find a Brewery in Seattle that meets their needs.  This site tells you if you can bring your dogs or children with you on your next outing.  </p>
-    </div>
     <div class="container">
         <div class ="slideshow">    
           <img class="first" src="../images/brewImages/allbeers.jpg"> 
@@ -116,12 +114,16 @@
             <img src="../images/brewImages/cheers.jpg"/>
         </div>
     </div> 
+    <div id = "someWords">
+    <p>Seattle Brewery Finder was started in a Code Fellows 201 class.  It was the final project idea of David Stoll.  The goal of Seattle Brewery Finder is to allow a user to find a Brewery in Seattle that meets their needs.  This site tells you if you can bring your dogs or children with you on your next outing.  </p>
+    </div>
     <div id='map'>
-    <iframe src="https://www.google.com/maps/d/embed?mid=1VI9Lz2Gn27ZQEydghwelA-AHUMDl4lnS" width="640" height="480" align="middle"></iframe>
+    <iframe src="https://www.google.com/maps/d/embed?mid=1VI9Lz2Gn27ZQEydghwelA-AHUMDl4lnS" width="900" height="480" align="middle"></iframe>
     </div>
   <footer>
     <p>&copy Seattle Brewery Finders</p>
   </footer>
   <script src = "../app.js"></script>
+</div>
 </body>
 </html>
